# gtkmm-demo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile~  cmake_install.cmake  editor-demo  examplewindow.cc  main.cc
src/: editorwindow.cc  editorwindow.h  examplewindow.cc  examplewindow.h  keywordhighlighter.cc  keywordhighlighter.h  main.cc  texttagfactory.h  texttagfactoryimpl.cc  texttagfactoryimpl.h
